force-app/main/default/objects/Budget_Reporting_Entry__c/Budget_Reporting_Entry__c.object-meta.xml
<CustomObject>
    <label>Budget &amp; Reporting Entry</label>
    <nameField>
        <label>Budget &amp; Reporting Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget &amp; Reporting Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>