force-app/main/default/objects/Budget_Reporting_Entry__c/fields/B_R_Number__c.field-meta.xml
<CustomField>
    <fullName>B_R_Number__c</fullName>
    <label>B&amp;R Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>