force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Budget_Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_Reporting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget &amp; Reporting Code</label>
    <referenceTo>Budget_Reporting_Code__c</referenceTo>
    <relationshipLabel>Budget &amp; Reporting Entries</relationshipLabel>
    <relationshipName>Budget_Reporting_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>