force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Commen__c.field-meta.xml
<CustomField>
    <fullName>Commen__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>