force-app/main/default/objects/Budget_Reporting_Entry__c/fields/CRADA_lookup__c.field-meta.xml
<CustomField>
    <fullName>CRADA_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>Budget &amp; Reporting Entries</relationshipLabel>
    <relationshipName>Budget_Reporting_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>