force-app/main/default/objects/Budget_Reporting_Entry__c/fields/CRADA_picklist__c.field-meta.xml
<CustomField>
    <fullName>CRADA_picklist__c</fullName>
    <label>CRADA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>