force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Funding_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Agreement__c</fullName>
    <label>Work Authorization</label>
    <referenceTo>Funding_Agreement__c</referenceTo>
    <relationshipLabel>Budget &amp; Reporting Entries</relationshipLabel>
    <relationshipName>Budget_Reporting_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>