force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Funds_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Funds_Recieved__c</fullName>
    <label>Funds Recieved</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>