force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Incremental_Funding__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Funding__c</fullName>
    <label>Incremental Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>