force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Incremental_Funding_picklist__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Funding_picklist__c</fullName>
    <label>Incremental Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>