force-app/main/default/objects/Budget_Reporting_Entry__c/fields/New_Project__c.field-meta.xml
<CustomField>
    <fullName>New_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Project</label>
    <type>Checkbox</type>
</CustomField>