force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity #</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Budget &amp; Reporting Entries</relationshipLabel>
    <relationshipName>Budget_Reporting_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>