force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project #</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Budget &amp; Reporting Entries</relationshipLabel>
    <relationshipName>Budget_Reporting_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>