force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>