force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Scope_Change_picklist__c.field-meta.xml
<CustomField>
    <fullName>Scope_Change_picklist__c</fullName>
    <label>Scope Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>