force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statement of Work</label>
    <type>Checkbox</type>
</CustomField>