force-app/main/default/objects/Budget_Reporting_Entry__c/fields/Statement_of_Work_picklist__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Work_picklist__c</fullName>
    <label>Statement of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>