force-app/main/default/objects/Budget_Reporting_Entry__c/validationRules/EPR_Current_Must_be_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>EPR_Current_Must_be_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>!(ISPICKVAL(EPR_Current_picklist__c,&apos;yes&apos;))</errorConditionFormula>
    <errorDisplayField>EPR_Current_picklist__c</errorDisplayField>
    <errorMessage>&apos;EPR Current&apos; field must be &apos;Yes&apos;</errorMessage>
</ValidationRule>