force-app/main/default/objects/Budget_Reporting_Entry__c/validationRules/If_CRADA_is_yes.validationRule-meta.xml
<ValidationRule>
    <fullName>If_CRADA_is_yes</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(CRADA_picklist__c,&apos;yes&apos;)&amp;&amp;ISBLANK(CRADA_lookup__c)</errorConditionFormula>
    <errorDisplayField>CRADA_lookup__c</errorDisplayField>
    <errorMessage>If &apos;CRADA&apos; is yes, you must enter a CRADA record in the lookup field.</errorMessage>
</ValidationRule>