force-app/main/default/objects/Budget_Reporting_Entry__c/validationRules/Incremental_Funding_must_be_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Incremental_Funding_must_be_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Incremental_Funding_picklist__c,&apos;yes&apos;)</errorConditionFormula>
    <errorDisplayField>Incremental_Funding_picklist__c</errorDisplayField>
    <errorMessage>Incremental Funding must be yes</errorMessage>
</ValidationRule>