force-app/main/default/objects/Budget_Reporting_Entry__c/validationRules/Scope_Change_must_be_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Scope_Change_must_be_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>!(ISPICKVAL(Scope_Change_picklist__c,&apos;yes&apos;))</errorConditionFormula>
    <errorDisplayField>Scope_Change_picklist__c</errorDisplayField>
    <errorMessage>The field &apos;Scope Change&apos; must be yes.</errorMessage>
</ValidationRule>