force-app/main/default/objects/Budget_Reporting_Entry__c/validationRules/Statement_of_Work_must_be_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Statement_of_Work_must_be_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>!(ISPICKVAL(Statement_of_Work_picklist__c,&apos;yes&apos;))</errorConditionFormula>
    <errorDisplayField>Statement_of_Work_picklist__c</errorDisplayField>
    <errorMessage>The field &apos;Statement of Work&apos; must be yes.</errorMessage>
</ValidationRule>